# traj-opt-arm

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
docker/: Dockerfile  docker-compose.yml
model/: cartpole.urdf  so101.xml
src/: CMakeLists.txt  main.cpp  periodic_sim_timer.cpp  periodic_sim_timer.hpp  simulator.cpp  simulator.hpp
src/cartpole/: CMakeLists.txt
src/cartpole/HermiteSimpson_collocation/: CMakeLists.txt  HermiteSimpson_collocation_constraints.cpp  HermiteSimpson_collocation_constraints.hpp  control_effort_HS_cost.cpp  control_effort_HS_cost.hpp  control_effort_hs_cost.cpp  control_effort_hs_cost.hpp  hermite_simpson_collocation_constraints.cpp  hermite_simpson_collocation_constraints.hpp  hs_traj_extractor.cpp  main_cartpole_HS.cpp  main_cartpole_hs.cpp  trajectory_variables.hpp
src/cartpole/trapezoidal_collocation/: CMakeLists.txt  control_effort_trapezoidal_cost.cpp  hs_traj_extractor.cpp  main_cartpole_trapezoidal.cpp  main_load_cartpole_urdf.cpp  trajectory_state_variables.hpp  trapezoidal_collocation_constraints.cpp  trapezoidal_collocation_constraints.hpp
src/hardware/: CMakeLists.txt  calibration.cpp  calibration.hpp  read_servo_params.cpp  so101_bus.cpp  so101_bus.hpp  so101_move.cpp  so101_scan.cpp  so101_trajectory_execution.cpp  traj_element.hpp
src/ifopt/: CMakeLists.txt  hs071_constraints.hpp  hs071_cost.hpp  hs071_variables.hpp  main_ifopt_hs071.cpp
src/ipopt/: CMakeLists.txt
src/ipopt/example/: CMakeLists.txt
src/ipopt/tutorials/: CMakeLists.txt
src/ipopt/tutorials/hs071_cpp/: CMakeLists.txt  hs071_nlp.cpp  hs071_nlp.hpp  main_hs071.cpp
src/plotting/: plot_trajs.py  pyproject.toml
src/simulation/: CMakeLists.txt  main.cpp  periodic_sim_timer.cpp  periodic_sim_timer.hpp  simulator.cpp  simulator.hpp
src/so101_arm/: CMakeLists.txt
src/so101_arm/hermite_simpson_collocation/: CMakeLists.txt  main_so101_hs.cpp
src/so101_arm/trapezoidal_collocation/: CMakeLists.txt  main_load_so101_mj.cpp  main_so101_trapezoidal.cpp
src/trajectory_optimization/: CMakeLists.txt  traj_element.hpp  trajectory_variables.hpp  trapezoidal_traj_extractor.cpp  trapezoidal_traj_extractor.hpp
src/trajectory_optimization/dynamics/: CMakeLists.txt  robot_dynamics.cpp  robot_dynamics.hpp  robot_dynamics_hs.cpp
src/trajectory_optimization/hermite_simpson/: CMakeLists.txt  control_effort_hs_cost.cpp  control_effort_hs_cost.hpp  hermite_simpson_collocation_constraints.cpp  hermite_simpson_collocation_constraints.hpp
src/trajectory_optimization/splines/: CMakeLists.txt  cubic_spline.cpp  cubic_spline.hpp  linear_spline.cpp  linear_spline.hpp  polynomial_interpolation.hpp  quadratic_polynomial.hpp  quadratic_spline.cpp  quadratic_spline.hpp  quadratic_spline_hs.cpp  quadratic_spline_hs.hpp
src/trajectory_optimization/trapezoidal/: CMakeLists.txt  control_effort_trapezoidal_cost.cpp  trapezoidal_collocation_constraints.cpp  trapezoidal_collocation_constraints.hpp
src/trajectory_optimization/utils/: CMakeLists.txt  hs_traj_extractor.cpp  hs_traj_extractor.hpp  save_trajectory.cpp  save_trajectory.hpp  traj_element.hpp  trapezoidal_traj_extractor.cpp  trapezoidal_traj_extractor.hpp
