# add_executable(main_cartpole_trapezoidal main_cartpole_trapezoidal.cpp trapezoidal_collocation_constraints.cpp control_effort_trapezoidal_cost.cpp)
# include_directories(main_cartpole_trapezoidal PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
# target_link_libraries(main_cartpole_trapezoidal PRIVATE ipopt ifopt::ifopt_ipopt traj_utils robot_dynamics)

add_executable(main_load_so101 main_load_so101_mj.cpp)
include_directories(main_load_so101 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(main_load_so101 PRIVATE pinocchio::pinocchio)
