add_executable(main_so101_trapezoidal main_so101_trapezoidal.cpp)
include_directories(main_so101_trapezoidal PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(main_so101_trapezoidal PRIVATE ipopt trapezoidal traj_utils robot_dynamics)

add_executable(main_load_so101 main_load_so101_mj.cpp)
include_directories(main_load_so101 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(main_load_so101 PRIVATE pinocchio::pinocchio)
